--- a/app.yml
+++ b/app.yml
@@ -36,7 +36,7 @@ x-shared: &shared
 
 services:
 
-  app:
+  server:
     image: registry.gitlab.com/finestructure/swiftpackageindex:${VERSION}
     <<: *shared
     depends_on:
