--- a/mon.yml
+++ b/mon.yml
@@ -12,7 +12,6 @@ services:
       GF_SERVER_ROOT_URL: "${GF_SERVER_ROOT_URL}"
     volumes:
       - grafana_data:/var/lib/grafana
-    restart: always
     ports:
       - 3000:3000
     networks:
@@ -78,5 +77,5 @@ volumes:
 
 
 networks:
-  backend:
+  app_backend:
     external: true
