--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -105,17 +105,6 @@ deploy prod:  # PROD: auto-deploy tags
 
 
 
-deploy dev:  # DEV: auto-deploy main
-  rules:
-    - if: '$ENV == "dev" && $CI_COMMIT_BRANCH == "main"'
-    - if: '$ENV == "dev" && $CI_COMMIT_TAG != null'
-  tags:
-    # TODO: currently still targeting the existing spi-dev
-    # once we've switched over, update the default pipeline
-    - spi-dev
-  <<: *deploy-common
-
-
 # TODO: consolidate with prod deployment once we've moved both envs
 .deploy-common-dev: &deploy-common-dev
   stage: deploy
@@ -197,13 +186,21 @@ deploy dev:  # DEV: auto-deploy main
       done
     fi
 
-  
+
+deploy dev:  # DEV: auto-deploy main
+  rules:
+    - if: '$ENV == "dev" && $CI_COMMIT_BRANCH == "main"'
+    - if: '$ENV == "dev" && $CI_COMMIT_TAG != null'
+  tags:
+    - spi-d1
+  <<: *deploy-common-dev
+
+
 deploy dev (ad hoc):  # DEV: deploy any revision manually
   rules:
     - if: '$ENV == "dev"'
       when: manual
   tags:
-    # TODO: change back to spi-dev after switch over
     - spi-d1
   <<: *deploy-common-dev
 
