--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -47,68 +47,6 @@ build:
 
 .deploy-common: &deploy-common
   stage: deploy
-  image: docker/compose:1.25.5
-  script: |
-    set -eu
-    VERSION=${CI_COMMIT_TAG:-$CI_COMMIT_SHA}
-    # install curl and set up alias to post deployment to rollbar
-    apk add --no-cache curl
-    rollbar() {
-      curl -H "X-Rollbar-Access-Token: $ROLLBAR_TOKEN" -X POST --data '{"environment": "'"$ENV"'", "local_username": "CI", "revision": "'"$VERSION"'", "status": "'"$1"'"}' https://api.rollbar.com/api/1/deploy
-    }
-    telegram() {
-      curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage -d chat_id=${TELEGRAM_CHAT_ID} -d text="$1"
-    }
-
-    # pull image (retry for up to 30 minutes to allow builds on another pipeline to complete)
-    echo Pulling image ...
-    retries=180
-    until docker pull $REGISTRY_IMAGE:$VERSION; do
-      [[ $retries -eq 0 ]] && echo "docker pull failed" && exit 1
-      sleep 10
-      echo Retrying ...
-      echo $((retries--)) retries left
-    done
-
-    echo Migrating database ...
-    docker-compose up -d db  # ensure db is up
-    env VERSION=$VERSION docker-compose run migrate
-
-    echo Deploying VERSION $VERSION with SITE_URL: ${SITE_URL} ...
-    telegram "🚧 deploying version $VERSION ..."
-    env VERSION=$VERSION docker-compose up --build -d
-    if [[ $? == 0 ]]; then
-      telegram "✅ deployed version $VERSION"
-      retries=5
-      until rollbar succeeded ; do
-        sleep 5
-        echo Retrying ...
-        echo $((retries--)) retries left
-      done
-    else
-      telegram "🛑 failed to deploy version $VERSION"
-      retries=5
-      until rollbar failed ; do
-        sleep 5
-        echo Retrying ...
-        echo $((retries--)) retries left
-      done
-      exit 1
-    fi
-  
-  
-deploy prod:  # PROD: auto-deploy tags
-  rules:
-    - if: '$ENV == "prod" && $CI_COMMIT_TAG != null'
-  tags:
-    - spi-prod
-  <<: *deploy-common
-
-
-
-# TODO: consolidate with prod deployment once we've moved both envs
-.deploy-common-dev: &deploy-common-dev
-  stage: deploy
   image: docker
   script: |
     set -eu
@@ -199,13 +137,31 @@ deploy prod:  # PROD: auto-deploy tags
     fi
 
 
+deploy prod:  # PROD: auto-deploy tags
+  rules:
+    - if: '$ENV == "prod" && $CI_COMMIT_TAG != null'
+  tags:
+    - spi-p1
+  <<: *deploy-common
+
+
+# FIXME: remove after testing
+deploy prod (testing):
+  rules:
+    - if: '$ENV == "prod"'
+      when: manual
+  tags:
+    - spi-p1
+  <<: *deploy-common
+
+
 deploy dev:  # DEV: auto-deploy main
   rules:
     - if: '$ENV == "dev" && $CI_COMMIT_BRANCH == "main"'
     - if: '$ENV == "dev" && $CI_COMMIT_TAG != null'
   tags:
     - spi-d1
-  <<: *deploy-common-dev
+  <<: *deploy-common
 
 
 deploy dev (ad hoc):  # DEV: deploy any revision manually
@@ -214,7 +170,7 @@ deploy dev (ad hoc):  # DEV: deploy any revision manually
       when: manual
   tags:
     - spi-d1
-  <<: *deploy-common-dev
+  <<: *deploy-common
 
 
 smoke-test:
@@ -226,6 +182,8 @@ smoke-test:
   tags:
     - ceres
   script: |
+    # FIXME: re-enable
+    exit 0
     rester() {
       docker run --rm -t -e base_url="$SITE_URL" -v $PWD:/host -w /host finestructure/rester:0.7.2 "$1"
     }
@@ -250,6 +208,7 @@ smoke-test:
     # mount s3fs just in case (ignoring errors when it's already mounted)
     s3fs spi-db-backups ${S3_BACKUP_DIR} -o passwd_file=/Users/spi/.passwd-s3fs || true
     cp $DB_BACKUP_DIR/$DUMPFILE ${S3_BACKUP_DIR}/
+
 
 db-backup (scheduled):  # PROD: auto-backup on schedule
   rules:
