--- a/mon.yml
+++ b/mon.yml
@@ -16,6 +16,11 @@ services:
       - 3000:3000
     networks:
       - app_backend
+    deploy:
+      placement:
+        constraints:
+          # placement for data persistence
+          - node.labels.storage_location == grafana_data
 
 
   # logging
@@ -54,6 +59,11 @@ services:
         target: /prometheus.yml
     networks:
       - app_backend
+    deploy:
+      placement:
+        constraints:
+          # placement for data persistence
+          - node.labels.storage_location == prometheus_data
 
 
   pushgateway:
