--- a/app.yml
+++ b/app.yml
@@ -12,12 +12,21 @@ x-shared: &shared
     BUILD_TRIGGER_SLEEP: ${BUILD_TRIGGER_SLEEP}
     BUILDER_TOKEN: ${BUILDER_TOKEN}
     CHECKOUTS_DIR: ${CHECKOUTS_DIR}
-    DATABASE_HOST: ${DATABASE_HOST}
+    # FIXME: remove override
+    # DATABASE_HOST: ${DATABASE_HOST}
+    DATABASE_HOST: spi-prod-db-1.postgres.database.azure.com
+
     DATABASE_PORT: ${DATABASE_PORT}
     DATABASE_NAME: ${DATABASE_NAME}
-    DATABASE_USERNAME: ${DATABASE_USERNAME}
+    # FIXME: remove override
+    # DATABASE_USERNAME: ${DATABASE_USERNAME}
+    DATABASE_USERNAME: spi_prod@spi-prod-db-1
+
     DATABASE_PASSWORD: ${DATABASE_PASSWORD}
-    DATABASE_USE_TLS: ${DATABASE_USE_TLS}
+    # FIXME: remove override
+    # DATABASE_USE_TLS: ${DATABASE_USE_TLS}
+    DATABASE_USE_TLS: 'true'
+
     GITHUB_TOKEN: ${GITHUB_TOKEN}
     GITLAB_API_TOKEN: ${GITLAB_API_TOKEN}
     GITLAB_PIPELINE_LIMIT: ${GITLAB_PIPELINE_LIMIT}
@@ -26,7 +35,10 @@ x-shared: &shared
     LOG_LEVEL: ${LOG_LEVEL}
     METRICS_PUSHGATEWAY_URL: ${METRICS_PUSHGATEWAY_URL}
     ROLLBAR_TOKEN: ${ROLLBAR_TOKEN}
-    SITE_URL: ${SITE_URL}
+    # FIXME: remove override
+    # SITE_URL: ${SITE_URL}
+    SITE_URL: http://13.68.174.170
+
     TWITTER_API_KEY: ${TWITTER_API_KEY}
     TWITTER_API_SECRET: ${TWITTER_API_SECRET}
     TWITTER_ACCESS_TOKEN_KEY: ${TWITTER_ACCESS_TOKEN_KEY}
