--- a/app.yml
+++ b/app.yml
@@ -39,10 +39,11 @@ x-shared: &shared
     # SITE_URL: ${SITE_URL}
     SITE_URL: http://13.68.174.170
 
-    TWITTER_API_KEY: ${TWITTER_API_KEY}
-    TWITTER_API_SECRET: ${TWITTER_API_SECRET}
-    TWITTER_ACCESS_TOKEN_KEY: ${TWITTER_ACCESS_TOKEN_KEY}
-    TWITTER_ACCESS_TOKEN_SECRET: ${TWITTER_ACCESS_TOKEN_SECRET}
+    # FIXME: re-enable
+    # TWITTER_API_KEY: ${TWITTER_API_KEY}
+    # TWITTER_API_SECRET: ${TWITTER_API_SECRET}
+    # TWITTER_ACCESS_TOKEN_KEY: ${TWITTER_ACCESS_TOKEN_KEY}
+    # TWITTER_ACCESS_TOKEN_SECRET: ${TWITTER_ACCESS_TOKEN_SECRET}
   volumes:
     - checkouts:/checkouts
 
