--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -49,7 +49,7 @@ build:
   stage: deploy
   image: docker
   script: |
-    set -eux
+    set -eu
     VERSION=${CI_COMMIT_TAG:-$CI_COMMIT_SHA}
 
     rollbar() {
@@ -152,6 +152,8 @@ deploy prod (testing):
       when: manual
   tags:
     - spi-p1
+  variables:
+    SITE_URL: 'http://13.68.174.170'
   <<: *deploy-common
 
 
