Remove test instrumentation

--- a/app.yml
+++ b/app.yml
@@ -12,21 +12,12 @@ x-shared: &shared
     BUILD_TRIGGER_SLEEP: ${BUILD_TRIGGER_SLEEP}
     BUILDER_TOKEN: ${BUILDER_TOKEN}
     CHECKOUTS_DIR: ${CHECKOUTS_DIR}
-    # FIXME: remove override
-    # DATABASE_HOST: ${DATABASE_HOST}
-    DATABASE_HOST: spi-prod-db-1.postgres.database.azure.com
-
+    DATABASE_HOST: ${DATABASE_HOST}
     DATABASE_PORT: ${DATABASE_PORT}
     DATABASE_NAME: ${DATABASE_NAME}
-    # FIXME: remove override
-    # DATABASE_USERNAME: ${DATABASE_USERNAME}
-    DATABASE_USERNAME: spi_prod@spi-prod-db-1
-
+    DATABASE_USERNAME: ${DATABASE_USERNAME}
     DATABASE_PASSWORD: ${DATABASE_PASSWORD}
-    # FIXME: remove override
-    # DATABASE_USE_TLS: ${DATABASE_USE_TLS}
-    DATABASE_USE_TLS: 'true'
-
+    DATABASE_USE_TLS: ${DATABASE_USE_TLS}
     GITHUB_TOKEN: ${GITHUB_TOKEN}
     GITLAB_API_TOKEN: ${GITLAB_API_TOKEN}
     GITLAB_PIPELINE_LIMIT: ${GITLAB_PIPELINE_LIMIT}
@@ -35,15 +26,11 @@ x-shared: &shared
     LOG_LEVEL: ${LOG_LEVEL}
     METRICS_PUSHGATEWAY_URL: ${METRICS_PUSHGATEWAY_URL}
     ROLLBAR_TOKEN: ${ROLLBAR_TOKEN}
-    # FIXME: remove override
-    # SITE_URL: ${SITE_URL}
-    SITE_URL: http://13.68.174.170
-
-    # FIXME: re-enable
-    # TWITTER_API_KEY: ${TWITTER_API_KEY}
-    # TWITTER_API_SECRET: ${TWITTER_API_SECRET}
-    # TWITTER_ACCESS_TOKEN_KEY: ${TWITTER_ACCESS_TOKEN_KEY}
-    # TWITTER_ACCESS_TOKEN_SECRET: ${TWITTER_ACCESS_TOKEN_SECRET}
+    SITE_URL: ${SITE_URL}
+    TWITTER_API_KEY: ${TWITTER_API_KEY}
+    TWITTER_API_SECRET: ${TWITTER_API_SECRET}
+    TWITTER_ACCESS_TOKEN_KEY: ${TWITTER_ACCESS_TOKEN_KEY}
+    TWITTER_ACCESS_TOKEN_SECRET: ${TWITTER_ACCESS_TOKEN_SECRET}
   volumes:
     - checkouts:/checkouts
 
