--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "scripts": {
     "build": "parcel build . --dist-dir Public",
-    "serve": "parcel serve . --dist-dir Public"
+    "serve": "parcel serve . --dist-dir Public --no-hmr"
   },
   "dependencies": {
     "@hotwired/turbo": "^7.0.0-beta.4",
