--- a/Dockerfile.base
+++ b/Dockerfile.base
@@ -11,8 +11,8 @@ RUN apt-get update && apt-get install -y git curl
 # install swift toolchain so we can run `swift package dump-package`
 # (enable this whenever we need to support an upcoming Swift version before updating the
 # base image's swift version)
-# WORKDIR /
-# RUN curl https://swift.org/builds/swift-5.3-branch/ubuntu1804/swift-5.3-DEVELOPMENT-SNAPSHOT-2020-07-04-a/swift-5.3-DEVELOPMENT-SNAPSHOT-2020-07-04-a-ubuntu18.04.tar.gz -o toolchain.tgz \
-#     && tar xvfz toolchain.tgz \
-#     && rm toolchain.tgz
-# RUN ln -s /swift-5.3-DEVELOPMENT-SNAPSHOT-2020-07-04-a-ubuntu18.04 /swift-5.3
+WORKDIR /
+RUN curl https://swift.org/builds/swift-5.4-branch/ubuntu1804/swift-5.4-DEVELOPMENT-SNAPSHOT-2021-03-25-a/swift-5.4-DEVELOPMENT-SNAPSHOT-2021-03-25-a-ubuntu18.04.tar.gz -o toolchain.tgz \
+    && tar xvfz toolchain.tgz \
+    && rm toolchain.tgz
+RUN ln -s /swift-5.4-DEVELOPMENT-SNAPSHOT-2021-03-25-a-ubuntu18.04 /swift-5.4
