--- a/Resources/apple-app-site-association.json
+++ b/Resources/apple-app-site-association.json
@@ -4,13 +4,7 @@
       {
         "appIDs": ["A42K5AU657.com.swiftpackageindex.playgrounds"],
         "defaults": { "caseSensitive": false },
-        "components": [
-          {
-            "/": "/try-in-a-playground/",
-            "?": { "dependencies": "*" },
-            "comment": "Launch from a package page's 'Try in a Playground' link."
-          }
-        ]
+        "paths": ["/try-in-a-playground/*"]
       }
     ]
   }
