Remove trailing slash

--- a/Resources/apple-app-site-association.json
+++ b/Resources/apple-app-site-association.json
@@ -4,7 +4,7 @@
       {
         "appIDs": ["A42K5AU657.com.swiftpackageindex.playgrounds"],
         "defaults": { "caseSensitive": false },
-        "paths": ["/try-in-a-playground/*"]
+        "paths": ["/try-in-a-playground"]
       }
     ]
   }
