--- a/Resources/apple-app-site-association.json
+++ b/Resources/apple-app-site-association.json
@@ -2,9 +2,9 @@
   "applinks": {
     "details": [
       {
-        "appIDs": ["A42K5AU657.com.swiftpackageindex.playgrounds"],
+        "appID": "A42K5AU657.com.swiftpackageindex.playgrounds",
         "defaults": { "caseSensitive": false },
-        "paths": ["/try-in-a-playground*"]
+        "paths": ["/try-in-a-playground/*"]
       }
     ]
   }
