Eliminate remaining differences

--- a/Resources/apple-app-site-association.json
+++ b/Resources/apple-app-site-association.json
@@ -1,9 +1,9 @@
 {
   "applinks": {
+    "apps": [],
     "details": [
       {
         "appID": "A42K5AU657.com.swiftpackageindex.playgrounds",
-        "defaults": { "caseSensitive": false },
         "paths": ["/try-in-a-playground/*"]
       }
     ]
