Revert "Change back bundle if"
This reverts commit e2360c53e855ec420e1c3b05b00f0e988c8444a9.

--- a/Resources/apple-app-site-association.json
+++ b/Resources/apple-app-site-association.json
@@ -3,7 +3,7 @@
     "apps": [],
     "details": [
       {
-        "appID": "A42K5AU657.co.finestructure.Slide",
+        "appID": "A42K5AU657.com.swiftpackageindex.playgrounds",
         "paths": ["/try-in-a-playground/*"]
       }
     ]
