--- a/Resources/apple-app-site-association.json
+++ b/Resources/apple-app-site-association.json
@@ -3,8 +3,8 @@
       "apps": [],
       "details": [
           {
-              "appID": "A42K5AU657.com.swiftpackageindex.playgrounds",
-              "paths": [ "*" ]
+              "appID": "A42K5AU657.com.swiftpackageindex.UniLinkTest",
+              "paths": [ "/try/*" ]
           }
       ]
   }
