Try new bundle id

--- a/Resources/apple-app-site-association.json
+++ b/Resources/apple-app-site-association.json
@@ -3,7 +3,7 @@
       "apps": [],
       "details": [
           {
-              "appID": "A42K5AU657.com.swiftpackageindex.playgrounds",
+              "appID": "A42K5AU657.com.swiftpackageindex.playgrounds-test",
               "paths": [ "/try-in-a-playground/*" ]
           }
       ]
