Update to new bundle id

--- a/Resources/apple-app-site-association.json
+++ b/Resources/apple-app-site-association.json
@@ -3,8 +3,8 @@
       "apps": [],
       "details": [
           {
-              "appID": "A42K5AU657.com.swiftpackageindex.playgrounds-test",
-              "paths": [ "/try-in-a-playground/*" ]
+              "appID": "A42K5AU657.com.swiftpackageindex.spi-playgrounds",
+              "paths": [ "/try-in-a-playground*" ]
           }
       ]
   }
