--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -33,7 +33,9 @@ build:
     VERSION=${CI_COMMIT_TAG:-$CI_COMMIT_SHA}
     echo 'let appVersion: String? = "'${VERSION}'"' > ./Sources/App/Core/AppVersion.swift
 
-    docker run --rm -v $PWD:/host -w /host --entrypoint sh node:15.8-alpine /usr/local/bin/yarn && /usr/local/bin/yarn build
+    docker run --rm -v $PWD:/host -w /host --user $(id -u):$(id -g) node:15.8-alpine yarn
+    sudo chown -R $(id -u):$(id -g) .parcel-cache
+    docker run --rm -v $PWD:/host -w /host --user $(id -u):$(id -g) node:15.8-alpine yarn build
     docker build -t $REGISTRY_IMAGE:$VERSION .
 
     retries=3
