--- a/Dockerfile.base
+++ b/Dockerfile.base
@@ -12,7 +12,7 @@ RUN apt-get update && apt-get install -y git curl
 # (enable this whenever we need to support an upcoming Swift version before updating the
 # base image's swift version)
 WORKDIR /
-RUN curl https://swift.org/builds/swift-5.4-branch/ubuntu1804/swift-5.4-DEVELOPMENT-SNAPSHOT-2021-03-25-a/swift-5.4-DEVELOPMENT-SNAPSHOT-2021-03-25-a-ubuntu18.04.tar.gz -o toolchain.tgz \
-    && tar xvfz toolchain.tgz \
-    && rm toolchain.tgz
-RUN ln -s /swift-5.4-DEVELOPMENT-SNAPSHOT-2021-03-25-a-ubuntu18.04 /swift-5.4
+RUN mkdir swift-5.4 \
+    && cd swift-5.4 \
+    && curl https://swift.org/builds/swift-5.4-release/ubuntu1804/swift-5.4-RELEASE/swift-5.4-RELEASE-ubuntu18.04.tar.gz \
+    | tar -xvz --strip-components 1
