--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "lodash": "^4.17.20"
   },
   "devDependencies": {
-    "rollup": "^2.47.0"
+    "@rollup/plugin-commonjs": "^19.0.0",
+    "@rollup/plugin-node-resolve": "^13.0.0",
+    "rollup": "^2.47.0",
+    "rollup-plugin-terser": "^7.0.2",
   }
 }
