--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@rollup/plugin-commonjs": "^19.0.0",
     "@rollup/plugin-node-resolve": "^13.0.0",
     "rollup": "^2.47.0",
+    "rollup-plugin-styles": "^3.14.1",
     "rollup-plugin-terser": "^7.0.2",
+    "sass": "^1.32.12"
   }
 }
