Added Normalize.css to the front-end dependecies.

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "@hotwired/turbo": "^7.0.0-beta.4",
-    "lodash": "^4.17.20"
+    "lodash": "^4.17.20",
+    "normalize.css": "^8.0.1"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^19.0.0",
