--- a/mon.yml
+++ b/mon.yml
@@ -74,6 +74,29 @@ services:
       - app_backend
 
 
+  node-exporter:
+    image: basi/node-exporter:v1.15.0
+    networks:
+      - app_backend
+    volumes:
+      - /proc:/host/proc
+      - /sys:/host/sys
+      - /:/rootfs
+      - /etc/hostname:/etc/host_hostname
+    environment:
+      HOST_HOSTNAME: /etc/host_hostname
+    command: --path.procfs /host/proc --path.sysfs /host/sys --collector.textfile.directory /etc/node-exporter/ --collector.filesystem.ignored-mount-points "^/(sys|proc|dev|host|etc)($$|/)"
+    deploy:
+      mode: global
+      resources:
+        limits:
+          cpus: '0.10'
+          memory: 32M
+        reservations:
+          cpus: '0.10'
+          memory: 16M
+
+
 configs:
   loki_cfg:
     file: ./infrastructure/loki.yml
