Add node-exporter scrape config

--- a/infrastructure/prometheus.yml
+++ b/infrastructure/prometheus.yml
@@ -11,3 +11,9 @@ scrape_configs:
     honor_labels: true
     static_configs:
       - targets: ['pushgateway:9091']
+
+  - job_name: 'node-exporter'
+    dns_sd_configs:
+      - names: ['tasks.node-exporter']
+        type: A
+        port: 9100
