--- a/infrastructure/prometheus.yml
+++ b/infrastructure/prometheus.yml
@@ -17,3 +17,9 @@ scrape_configs:
       - names: ['tasks.node-exporter']
         type: A
         port: 9100
+
+  - job_name: 'cadvisor'
+    dns_sd_configs:
+      - names: ['tasks.cadvisor']
+        type: A
+        port: 8080
