--- a/mon.yml
+++ b/mon.yml
@@ -97,6 +97,29 @@ services:
           memory: 16M
 
 
+  cadvisor:
+    image: google/cadvisor:v0.37.5
+    networks:
+      - backend
+    volumes:
+      - "/var/run/docker.sock:/var/run/docker.sock:ro"
+      - "/:/rootfs:ro"
+      - "/var/run:/var/run:rw"
+      - "/sys:/sys:ro"
+      - "/var/lib/docker/:/var/lib/docker:ro"
+    environment:
+      LOGSPOUT: ignore
+    deploy:
+      mode: global
+      resources:
+        limits:
+          cpus: '0.20'
+          memory: 128M
+        reservations:
+          cpus: '0.10'
+          memory: 64M
+
+
 configs:
   loki_cfg:
     file: ./infrastructure/loki.yml
