--- a/mon.yml
+++ b/mon.yml
@@ -93,7 +93,7 @@ services:
   cadvisor:
     image: google/cadvisor:v0.37.5
     networks:
-      - backend
+      - app_backend
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock:ro"
       - "/:/rootfs:ro"
