--- a/infrastructure/prometheus.yml
+++ b/infrastructure/prometheus.yml
@@ -5,7 +5,7 @@ global:
 scrape_configs:
   - job_name: 'spi-app'
     static_configs:
-      - targets: ['app:80']
+      - targets: ['app_server:80']
 
   - job_name: 'pushgateway'
     honor_labels: true
