--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Install unzip
         run: apt-get update && apt-get install -y unzip
       - name: Run tests
-        run: cp .env.testing.template .env.testing && make test && git diff --quiet Package.resolved
+        run: cp Package.resolved Package.resolved.orig && cp .env.testing.template .env.testing && make test && diff Package.resolved.orig Package.resolved
         env:
           DATABASE_HOST: postgres
           DATABASE_PORT: '5432'
