--- a/Dockerfile.base
+++ b/Dockerfile.base
@@ -6,7 +6,7 @@ FROM swift:5.4-focal-slim
 # FROM vapor/ubuntu:18.04  # fails with invalid linker name in argument '-fuse-ld=gold'
 
 # install required tools
-RUN apt-get update && apt-get install -y git curl unzip
+RUN apt-get update && apt-get install -y curl git make unzip
 
 # install swift toolchain so we can run `swift package dump-package`
 # (enable this whenever we need to support an upcoming Swift version before updating the
