Use spi-base with package collection tool

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
     name: Test
     runs-on: ubuntu-latest
     container:
-      image: registry.gitlab.com/finestructure/spi-base:0.6.2
+      image: registry.gitlab.com/finestructure/spi-base:6d1ecb8053cc64786de45d2619d5364b63f58def
     services:
       postgres:
         image: postgres:11.6-alpine
