Pass env variable through to environment

--- a/app.yml
+++ b/app.yml
@@ -26,6 +26,7 @@ x-shared: &shared
     BUILD_TRIGGER_SLEEP: ${BUILD_TRIGGER_SLEEP}
     BUILDER_TOKEN: ${BUILDER_TOKEN}
     CHECKOUTS_DIR: ${CHECKOUTS_DIR}
+    COLLECTION_SIGNING_PRIVATE_KEY: ${COLLECTION_SIGNING_PRIVATE_KEY}
     DATABASE_HOST: ${DATABASE_HOST}
     DATABASE_PORT: ${DATABASE_PORT}
     DATABASE_NAME: ${DATABASE_NAME}
