--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "SwiftPackageIndex",
+  "license": "Apache-2.0",
   "repository": "git@github.com:SwiftPackageIndex/SwiftPackageIndex-Server.git",
   "scripts": {
     "clean": "rm -f Public/main.css Public/main.css.map Public/main.js Public/main.js.map",
