--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,7 +42,10 @@ jobs:
       - name: Install unzip
         run: apt-get update && apt-get install -y unzip
       - name: Run tests
-        run: cp .env.testing.template .env.testing && make test
+        # temporarily run without TSAN due to false positives on Linux
+        # https://github.com/SwiftPackageIndex/SwiftPackageIndex-Server/pull/1496
+        # Review with Swift 5.6
+        run: cp .env.testing.template .env.testing && make test-without-tsan
         env:
           COLLECTION_SIGNING_PRIVATE_KEY: ${{ secrets.COLLECTION_SIGNING_PRIVATE_KEY }}
           DATABASE_HOST: postgres
