--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,4 +1,4 @@
-blank_issues_enabled: false
+blank_issues_enabled: true
 contact_links:
   - name: Idea or Feature Request
     url: https://github.com/SwiftPackageIndex/SwiftPackageIndex-Server/discussions/new?category=ideas
