--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "serve": "./FrontEnd/esbuild.mjs --watch"
   },
   "dependencies": {
+    "@hotwired/stimulus": "^3.0.1",
     "@hotwired/turbo": "^7.1.0",
     "normalize.css": "^8.0.1"
   },
