Stop Percy working for now. Seeing the step execute will be enough.

--- a/.github/workflows/snapshots.yml
+++ b/.github/workflows/snapshots.yml
@@ -37,5 +37,5 @@ jobs:
       - name: Run Percy
         if: steps.diff-includes-html-files.value != '0'
         run: npx @percy/cli snapshot ./Tests/AppTests/__Snapshots__/WebpageSnapshotTests
-        env:
-          PERCY_TOKEN: ${{ secrets.PERCY_TOKEN }}
+        # env:
+        #   PERCY_TOKEN: ${{ secrets.PERCY_TOKEN }}
