--- a/.github/workflows/snapshots.yml
+++ b/.github/workflows/snapshots.yml
@@ -25,6 +25,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
       - name: Build Front-End
         run: make build-front-end
       - name: Copy Front-End
