--- a/.github/workflows/snapshots.yml
+++ b/.github/workflows/snapshots.yml
@@ -35,9 +35,11 @@ jobs:
         run: rm ./Tests/AppTests/__Snapshots__/WebpageSnapshotTests/*_noImageSnapshots*.html
       - id: diff-includes-html-files
         name: Diff for HTML Changes
-        run: git diff --name-only origin/main | grep .html$ | wc -l
+        run: |
+          git diff --name-only origin/main | grep .html$ | wc -l | bc 2>&1 | tee output.txt
+          echo "::set-output name=matching-files::$(cat output.txt)"
       - name: Run Percy
-        if: steps.diff-includes-html-files.value != 0
+        if: steps.diff-includes-html-files.outputs.matching-files != '0'
         run: npx @percy/cli snapshot ./Tests/AppTests/__Snapshots__/WebpageSnapshotTests
         # env:
         #   PERCY_TOKEN: ${{ secrets.PERCY_TOKEN }}
