--- a/.github/workflows/snapshots.yml
+++ b/.github/workflows/snapshots.yml
@@ -41,5 +41,5 @@ jobs:
       - name: Run Percy
         if: steps.diff-includes-html-files.outputs.matching-files != '0'
         run: npx @percy/cli snapshot ./Tests/AppTests/__Snapshots__/WebpageSnapshotTests
-        # env:
-        #   PERCY_TOKEN: ${{ secrets.PERCY_TOKEN }}
+        env:
+          PERCY_TOKEN: ${{ secrets.PERCY_TOKEN }}
