--- a/.github/workflows/snapshots.yml
+++ b/.github/workflows/snapshots.yml
@@ -36,8 +36,8 @@ jobs:
       - id: diff-includes-html-files
         name: Diff for HTML Changes
         run: |
-          git diff --name-only origin/main | grep .html$ | wc -l | bc 2>&1 | tee output.txt
-          echo "::set-output name=matching-files::$(cat output.txt)"
+          filecount=$(git diff origin/main --shortstat **.html | awk '{print $1}')
+          echo "::set-output name=matching-files::${filecount:-0}"
       - name: Run Percy
         if: steps.diff-includes-html-files.outputs.matching-files != '0'
         run: npx @percy/cli snapshot ./Tests/AppTests/__Snapshots__/WebpageSnapshotTests
