--- a/.percy.yml
+++ b/.percy.yml
@@ -1,7 +1,7 @@
 version: 2
 static:
-  files: '**/*.{html,htm}'
-  ignore: '**/*noImageSnapshots*.html'
+  include: '**/*.{html,htm}'
+  exclude: '**/*noImageSnapshots*.html'
 snapshot:
   widths:
     - 375
