--- a/.github/workflows/snapshots.yml
+++ b/.github/workflows/snapshots.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Diff for HTML Changes
         id: front-end-changes
         run: |
-          filecount=$(git diff origin/main --shortstat "**.html" "**.css" "**.js" | awk '{print $1}')
+          filecount=$(git diff origin/main --shortstat "**.html" "**.scss" "**.js" | awk '{print $1}')
           echo "::set-output name=matching-files::${filecount:-0}"
       - name: Run Percy
         if: steps.front-end-changes.outputs.matching-files != '0'
